KL mobile mainnav spacing fix attempt v17
played with spacing of slider text

--- a/style.css
+++ b/style.css
@@ -4633,7 +4633,7 @@ span.highlight {
 }
 #hero hgroup, .hero hgroup {
   	position: relative;
-  	top: 50%;
+  	top: 40%;
   	transform: translateY(-50%);
   	padding: 0 10%;
 }
